refactor: 重构HistoryMessageService